
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct in_addr {int dummy; } ;
struct hostent {int h_length; int h_addr; } ;


 struct hostent* gethostbyname (char*) ;
 int memcpy (char*,int ,int ) ;

int resolve(char *hostname,struct in_addr *addr)
{
  struct hostent *res;
  res=gethostbyname(hostname);
  if (res==((void*)0))
    return(0);
  memcpy((char *)addr,res->h_addr,res->h_length);
  return(1);
}
